--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ div#kategorimenu a:hover,div#menu a:hover span{color:#fff}
 .tab_content ul{color:#111;padding-left:35px}
 .tab_content ul li{list-style-type:square;padding-bottom:5px;padding-left:0px}
 .tab_content ul li a{color:black}
-.tab_content ul li a:hover{color:#333;text-decoration:underline}
+.tab_content ul li a:hover{color:green;text-decoration:underline}
 .tabs{padding-left:5px;overflow:hidden;padding-top:10px;margin-bottom:0px;padding-bottom:0px}
 .tabs li{border:1px solid #DDD;float:left;display:inline;text-align:center;overflow:hidden;font-size:11px;padding-left:0px;width:108px}
 .tabs li.active{border-bottom:none;border-right:none;border-left:none;margin-left:0px;padding-left:0px;width:114px}
@@ -285,7 +285,7 @@ input2{padding:2px;margin:5px 5px 1px 0;color:#B0B0B0;background-color:#222;bord
 #ustmenu ul{list-style:none}
 #ustmenu ul li{padding-right:10px;padding-left:10px;border-right:1px solid #DDD;float:left}
 #ustmenu ul li a{float:left;display:block;color:#111;font-size:10px;text-transform:uppercase;font-weight:bolder}
-#ustmenu ul li a:hover{float:left;color:green}
+#ustmenu ul li a:hover{float:left;color:green;border-bottom: 3px solid green;}
 #ustmenu li#sosyal6{border-right:none}
 #sosyal10{overflow:hidden;float:right}
 #sosyal1,#sosyal2,#sosyal3,#sosyal4,#sosyal5,#sosyal6,#sosyal7,#sosyal8,.sosyal9{text-align:left}
